--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
-name = "ml-attack-monitoring"
+name = "monitoring_toolkit"
 version = "0.1.0"
-description = "Toolkit for detecting adversarial behavior against ML APIs"
+description = "Toolkit for detecting adversarial behavior against ML models"
 authors = [{ name = "Daryna Oliynyk", email = "doliynyk@sba-research.org" }]
 readme = "README.md"
 requires-python = ">=3.8"
 license = { text = "MIT" }
 dependencies = [
+    "imagehash",
     "torch",
     "torchvision",
     "numpy",
